# battleship

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  readme.md  readme.txt  test.cpp
docs/: output.puml  uml.mermaid  uml.plantuml
game_logs/: cc_game_20230116095305.txt  cc_game_20230116102619.txt  cc_game_20230116194828.txt  game_20230111181858.txt  pc_game_20230116195426.txt
include/battleship/: Action.h  ActionType.h  AsciiArt.h  Battleship.h  Board.h  Coordinates.h  FiringBoard.h  Game.h  GameBoard.h  GameEngine.h  GameMode.h  GameRecorder.h  OccupationType.h  Orientation.h  Player.h  Ship.h  Submarine.h  SupportShip.h  Tile.h  UserCommand.h  Utility.h
src/: Action.cpp  ActionType.cpp  Battleship.cpp  Board.cpp  Coordinates.cpp  FiringBoard.cpp  Game.cpp  GameBoard.cpp  GameEngine.cpp  GameRecorder.cpp  OccupationType.cpp  Player.cpp  Ship.cpp  Submarine.cpp  SupportShip.cpp  Tile.cpp  UserCommand.cpp  Utility.cpp  battaglia_navale.cpp  battleship.cpp  main.cpp  replay.cpp
